--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "cypress run  --headless --reporter mochawesome",
-    "start": "webpack serve --mode development --port=3000",
+    "start": "webpack serve --mode development --hot  --port=3000",
     "build": "webpack --mode production"
   },
   "keywords": [],
@@ -19,7 +19,8 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.2.0"
   },
   "jest": {
     "moduleNameMapper": {
