--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.10",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-icons": "^4.11.0",
     "react-player": "^2.13.0",
+    "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
