--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.2",
+    "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.10",
     "@reduxjs/toolkit": "^1.9.7",
-    "axios": "^1.5.0",
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.4",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
@@ -27,7 +30,7 @@
     "react-player": "^2.13.0",
     "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.17.0",
     "react-slick": "^0.29.0",
     "react-snap-carousel": "^0.3.2",
     "slick-carousel": "^1.8.1",
